--- a/custom_components/yale_doorman_via_smarthub/manifest.json
+++ b/custom_components/yale_doorman_via_smarthub/manifest.json
@@ -6,5 +6,6 @@
   "requirements": [],
   "dependencies": [],
   "codeowners": ["@jockesyk"],
-  "config_flow": true
+  "config_flow": true,
+  "version": 1.0.0
 }
